Bug 1029856 - Call glClear() before blit composition. r=Sushil, a=1.4+